WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
240595
REGRESSION(
r294381
): [ Debug ] TestWebKitAPI.WebKit.CookieObserverCrash is a constant crash, ASSERTION FAILED: m_cookieObservers.isEmpty()
https://bugs.webkit.org/show_bug.cgi?id=240595
Summary
REGRESSION(r294381): [ Debug ] TestWebKitAPI.WebKit.CookieObserverCrash is a ...
Dawn Morningstar
Reported
2022-05-18 13:24:42 PDT
TestWebKitAPI.WebKit.CookieObserverCrash is a constant crash (Assertion Failed) on Mac and iOS debug queues History points to
r294381
as the suspected regression point HISTORY:
https://results.webkit.org/?suite=api-tests&test=TestWebKitAPI.WebKit.CookieObserverCrash
Crash-log: TestWebKitAPI.WebKit.CookieObserverCrash ASSERTION FAILED: m_cookieObservers.isEmpty() /Volumes/Data/worker/Apple-iOS-15-Simulator-Debug-Build/build/Source/WebKit/UIProcess/WebCookieManagerProxy.cpp(52) : virtual WebKit::WebCookieManagerProxy::~WebCookieManagerProxy() 1 0x11795fa09 WTFCrash 2 0x136839afb WTFCrashWithInfo(int, char const*, char const*, int) 3 0x1384703da WebKit::WebCookieManagerProxy::~WebCookieManagerProxy() 4 0x138470465 WebKit::WebCookieManagerProxy::~WebCookieManagerProxy() 5 0x138470489 WebKit::WebCookieManagerProxy::~WebCookieManagerProxy() 6 0x13876557c std::__1::default_delete<WebKit::WebCookieManagerProxy>::operator()(WebKit::WebCookieManagerProxy*) const 7 0x1387654fc std::__1::unique_ptr<WebKit::WebCookieManagerProxy, std::__1::default_delete<WebKit::WebCookieManagerProxy> >::reset(WebKit::WebCookieManagerProxy*) 8 0x138765499 std::__1::unique_ptr<WebKit::WebCookieManagerProxy, std::__1::default_delete<WebKit::WebCookieManagerProxy> >::~unique_ptr() 9 0x138765475 std::__1::unique_ptr<WebKit::WebCookieManagerProxy, std::__1::default_delete<WebKit::WebCookieManagerProxy> >::~unique_ptr() 10 0x138765455 WTF::UniqueRef<WebKit::WebCookieManagerProxy>::~UniqueRef() 11 0x138751095 WTF::UniqueRef<WebKit::WebCookieManagerProxy>::~UniqueRef() 12 0x138750f00 WebKit::NetworkProcessProxy::~NetworkProcessProxy() 13 0x138751155 WebKit::NetworkProcessProxy::~NetworkProcessProxy() 14 0x1387511d9 WebKit::NetworkProcessProxy::~NetworkProcessProxy() 15 0x136c6f02f WTF::ThreadSafeRefCounted<WebKit::AuxiliaryProcessProxy, (WTF::DestructionThread)2>::deref() const::'lambda'()::operator()() const 16 0x136c6efd9 WTF::Detail::CallableWrapper<WTF::ThreadSafeRefCounted<WebKit::AuxiliaryProcessProxy, (WTF::DestructionThread)2>::deref() const::'lambda'(), void>::call() 17 0x11798f2d2 WTF::Function<void ()>::operator()() const 18 0x1179e8c97 WTF::ensureOnMainRunLoop(WTF::Function<void ()>&&) 19 0x136c6ecdc WTF::ThreadSafeRefCounted<WebKit::AuxiliaryProcessProxy, (WTF::DestructionThread)2>::deref() const 20 0x136c6ec39 WebKit::AuxiliaryProcessProxy::deref() 21 0x13860315e WTF::DefaultRefDerefTraits<WebKit::NetworkProcessProxy>::derefIfNotNull(WebKit::NetworkProcessProxy*) 22 0x13863a9e9 WTF::RefPtr<WebKit::NetworkProcessProxy, WTF::RawPtrTraits<WebKit::NetworkProcessProxy>, WTF::DefaultRefDerefTraits<WebKit::NetworkProcessProxy> >::~RefPtr() 23 0x13850d3e5 WTF::RefPtr<WebKit::NetworkProcessProxy, WTF::RawPtrTraits<WebKit::NetworkProcessProxy>, WTF::DefaultRefDerefTraits<WebKit::NetworkProcessProxy> >::~RefPtr() 24 0x138849831 WebKit::WebsiteDataStore::~WebsiteDataStore() 25 0x138849b45 WebKit::WebsiteDataStore::~WebsiteDataStore() 26 0x137a5735f -[WKWebsiteDataStore dealloc] 27 0x10ac527d7 objc_object::sidetable_release(bool, bool) 28 0x137a6bcb9 WTF::RetainPtr<WKWebsiteDataStore>::~RetainPtr() 29 0x137a6bc75 WTF::RetainPtr<WKWebsiteDataStore>::~RetainPtr() 30 0x137a6bc59 LazyInitialized<WTF::RetainPtr<WKWebsiteDataStore> >::~LazyInitialized() 31 0x137a4ccf5 LazyInitialized<WTF::RetainPtr<WKWebsiteDataStore> >::~LazyInitialized() Child process terminated with signal 11: Segmentation fault Crash-Log URL:
https://build.webkit.org/#/builders/267/builds/2593/steps/18/logs/stdio
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-05-18 13:25:06 PDT
<
rdar://problem/93522972
>
Sihui Liu
Comment 2
2022-05-19 20:50:53 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/816
EWS
Comment 3
2022-05-25 18:53:46 PDT
Committed
r294860
(
250992@main
): <
https://commits.webkit.org/250992@main
> Reviewed commits have been landed. Closing PR #816 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug